complete main structure

--- a/main.css
+++ b/main.css
@@ -1,8 +1,8 @@
 body {
   margin: 0;
   padding: 0;
-  background: url(bg.jpg) no-repeat;
-  background-size: auto;
+  background: url(bg.jpg) no-repeat fixed;
+  background-size: cover;
 }
 
 .header {
@@ -61,4 +61,172 @@ body {
 
 #menu>li a:hover {
   text-decoration: underline;
+}
+
+.detail {
+  width: 1100px;
+  height: 3000px;
+  margin: 0 127px 0 127px;
+  background-color: white;
+}
+
+.what-i-do {
+  height: 500px;
+  position:relative;
+}
+
+.education {
+  height: 930px;
+}
+
+.photos {
+  height: 615px;
+}
+
+.get-in-touch {
+  height: 440px;
+
+}
+
+.leave-message {
+  height: 520px;
+}
+
+.spearator-line {
+  width: 1100px;
+  border: 1px solid rgb(199, 188, 188);
+}
+
+.underline {
+  height: 3px;
+  width: 70px;
+  margin: 10px auto 0px auto;
+  text-align: center;
+  background-color: black;
+}
+
+.title {
+  padding-top: 50px;
+  text-align: center;
+  font-family: 'open sans', helvetica, arial, 'Microsoft YaHei', 微软雅黑, STXihei, 华文细黑, sans-serif;
+font-size: 28px;
+font-style: normal;
+font-weight: 300;
+letter-spacing: 3px;
+}
+
+.introduce {
+  text-align: center;
+  padding-top: 30px;
+  padding-bottom: 20px;
+}
+
+#items {
+  position:absolute;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  padding-left: 100px;
+}
+
+#items>li {
+  text-align: center;
+  display: inline-block;
+  width: 300px;
+  height: 200px;
+}
+
+.item-name {
+  margin: 20px;
+}
+
+
+.photo-galary {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.photo-galary img {
+  width: 220px;
+  height: 170px;
+  margin: 0px 5px 5px 5px;
+}
+
+.img-line {
+  padding-top: 25px;
+}
+
+.contact-way {
+  position: relative;
+  text-align: center;
+}
+
+.contact-way li {
+  display: inline-block;
+  margin: 50px 20px auto;
+}
+
+.guest-form {
+  margin: 50px auto auto auto;
+  text-align: center;
+}
+
+.guest-form>div {
+    margin: 0px auto 35px auto;
+}
+
+.guest-form label {
+    margin-right: 20px;
+}
+
+.text-css {
+  text-align: center;
+  font-family: Comic Sans MS;
+   line-height: 1.4;
+   font-weight: normal;
+   font-stretch: normal;
+   font-variant: small-caps;
+   font-size: 16px;
+}
+
+.experience-content {
+  list-style-type: none;
+}
+
+.experience-content > li{
+  width: 800px;
+  height: 210px;
+  margin: 50px 140px auto auto;
+
+}
+
+.experience-content  img {
+  width: 220px;
+  height: 220px;
+  float: left;
+}
+
+.experience-content .content {
+  height: 220px;
+  width: 550px;
+  margin: 0px 0px auto auto;
+}
+
+.experience-content .content .title {
+  padding-top: 0px;
+  font-size: 20px;
+}
+
+.time {
+  margin-top: 20px;
+  text-align: center;
+  font-style: normal;
+  font-size: 100%;
+  line-height: 1;
+  font-family: inherit;
+  font-weight: bold;
+}
+
+.description {
+  text-align: center;
+  margin-top: 20px;
 }
