modify the avator

--- a/main.css
+++ b/main.css
@@ -22,7 +22,7 @@ body {
   width: 135px;
   height: 135px;
   border-radius: 100%;
-  background: url(avator.jpg);
+  background: url(avator1.jpg);
   background-size: 100%;
   position: relative;
   top: -67px;
