--- a/main.css
+++ b/main.css
@@ -1,13 +1,13 @@
 body {
   margin: 0;
   padding: 0;
-  background: url(bg.jpg) no-repeat fixed;
+  background: url(img/bg.jpg) no-repeat fixed;
   background-size: cover;
 }
 .header {
   width: 1100px;
   height: 170px;
-  background: url(header-bg.jpg) no-repeat;
+  background: url(img/header-bg.jpg) no-repeat;
   background-size: 100% auto;
   margin: 110px auto 0 auto;
 }
@@ -22,7 +22,7 @@ body {
   width: 135px;
   height: 135px;
   border-radius: 100%;
-  background: url(avator1.jpg);
+  background: url(img/avator1.jpg);
   background-size: 100%;
   position: relative;
   top: -67px;
